# project_image_processor

./: CMakeLists.txt  README.md  base_filters.cpp  base_filters.h  bitmap.cpp  bitmap.h  cmd_arg_parser.cpp  cmd_arg_parser.h  filter_factory.cpp  filter_factory.h  image.cpp  image.h  image_processor.cpp
